Bug 164703 - Context menu not showing spelling suggestions consistently
Summary: Context menu not showing spelling suggestions consistently
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium minor
Assignee: Justin L
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Context-Menu Mouse-Cursor
  Show dependency treegraph
 
Reported: 2025-01-14 09:40 UTC by Jordi
Modified: 2025-02-19 12:51 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
correct behaviour (31.10 KB, image/png)
2025-01-14 09:40 UTC, Jordi
Details
wrong behaviour (31.22 KB, image/png)
2025-01-14 09:41 UTC, Jordi
Details
Animation of behavior so there is no confusion (189.24 KB, image/gif)
2025-01-16 09:44 UTC, Jordi
Details
Sample file (17.29 KB, application/vnd.oasis.opendocument.text)
2025-01-16 13:13 UTC, Jordi
Details
Screnshoot, properties with 7.6.7 (97.48 KB, image/png)
2025-01-16 22:12 UTC, m_a_riosv
Details
works as it should (43.88 KB, image/png)
2025-01-25 07:07 UTC, Anna
Details
Animation of behavior on Linux (338.73 KB, image/gif)
2025-02-05 15:52 UTC, Jordi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jordi 2025-01-14 09:40:57 UTC
Created attachment 198525 [details]
correct behaviour

In Writer, when placing the visual cursor at the beginning of a misspelled word, the context menu (SHIFT+F10) does not always show the spelling suggestions. See attchted pics.

If the word is preceded by a tab, it does. If by a space, it does not. If the cursor is moved one letter to the right from that start of the word, it behaves correctly.

The previous version I was using, 7.6.7.2, did not exhibit this problem.

Tested using clean profile.

Currently using,

Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 12; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-AU (en_AU); UI: en-GB
Calc: CL threaded
Comment 1 Jordi 2025-01-14 09:41:17 UTC
Created attachment 198526 [details]
wrong behaviour
Comment 2 m_a_riosv 2025-01-15 15:38:34 UTC
Please attach a sample file, and detail the step to reproduce the issue.
Comment 3 Jordi 2025-01-15 18:55:31 UTC
(In reply to m_a_riosv from comment #2)
> Please attach a sample file, and detail the step to reproduce the issue.

No need for a sample file. You can reproduce it very easily,

1. type two misspelled words, separated by a space.
2. move visual cursor to the start of the 1st misspelled word.
3. Press SHIFT+F10, corrections ARE presented.
4. Move visual cursor to the start of the 2st misspelled word.
3. Press SHIFT+F10, corrections ARE NOT presented.

If the space between the words is replaced with a tab, it works for the second word as well.
Comment 4 m_a_riosv 2025-01-15 22:11:25 UTC
Works for me.
Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 5 Jordi 2025-01-16 09:29:47 UTC
(In reply to m_a_riosv from comment #4)
> Works for me.
> Version: 24.8.4.2 (X86_64) / LibreOffice Community
> Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
> CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render:
> Skia/Vulkan; VCL: win
> Locale: es-ES (es_ES); UI: en-US
> Calc: CL threaded

Don't know what to tell you. Just installed it in a clean VM and the behavior is exactly the same.

Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: en-AU (en_AU); UI: en-US
Calc: threaded
Comment 6 Jordi 2025-01-16 09:44:21 UTC
Created attachment 198574 [details]
Animation of behavior so there is no confusion
Comment 7 m_a_riosv 2025-01-16 11:47:55 UTC
Again, attach a sample file showing the issue.
Comment 8 Jordi 2025-01-16 13:13:11 UTC
Created attachment 198578 [details]
Sample file
Comment 9 m_a_riosv 2025-01-16 22:12:44 UTC
Created attachment 198590 [details]
Screnshoot, properties with 7.6.7
Comment 10 Anna 2025-01-25 07:06:09 UTC
Works for me as expected.

LO 24.8.4.2
OS: MacOS 15.2
Locale: en-US (en_FI:UTF-8); UI: en-US
Comment 11 Anna 2025-01-25 07:07:39 UTC
Created attachment 198753 [details]
works as it should
Comment 12 mikhail.machine 2025-02-01 07:35:44 UTC
Hello Jordi,

Thank you for reporting the bug. I can confirm that the bug is present in master.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a8ec21adf255b70bb6eeb0a1717190df303d8b26
CPU threads: 12; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_FI); UI: en-US
Writer: threaded
Comment 13 Jordi 2025-02-05 15:51:24 UTC
Noticed that hardware/OS was set to x86-64 (AMD64)/Windows (All)

Please be advised that this also happens on Linux as well. Attaching animation showing the same behavior. 

Tested on,

Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 14 Jordi 2025-02-05 15:52:34 UTC
Created attachment 199000 [details]
Animation of behavior on Linux
Comment 15 Buovjaga 2025-02-12 14:29:02 UTC
(In reply to Jordi from comment #14)
> Created attachment 199000 [details]
> Animation of behavior on Linux

Bibisected with linux-64-24.8 to 5bc7d0186d1a70990377a2f4c630fe11e2dfd166
tdf#111969 sw: acknowledge that last half-character in Get*Correction
Comment 16 Justin L 2025-02-12 16:04:54 UTC
I can't reproduce this either in my Ubuntu 24.04's LO (which is 24.2). I used comment 8's LO 24.8.4.2 Tests.el.odt. (It works at the start of a word, but not at the end of a word.)

However, I can reproduce this with my development builds. (It works at the end of a word, but not at the start of a word.)
Comment 17 Justin L 2025-02-12 23:39:34 UTC
(In reply to Justin L from comment #16)
> I can't reproduce this either in my Ubuntu 24.04's LO (which is 24.2).
Duh: first affects 24.8... and the Collabora Office I tested was also 24.2 based.
Comment 18 Commit Notification 2025-02-14 19:28:56 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/793853fbd1665e90ab91e9b45826174707617275

tdf#164703 tdf#111969 sw Get*Correction: only mouse passes PixelPos

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Buovjaga 2025-02-15 07:24:14 UTC
Fix verified, thanks.
Comment 20 stragu 2025-02-16 00:18:51 UTC
Thanks Justin. I assume you can now resolve as "fixed"?
Comment 21 Justin L 2025-02-16 01:26:19 UTC
(In reply to Stéphane Guillou (stragu) from comment #20)
> Thanks Justin. I assume you can now resolve as "fixed"?
After backports are completed...
Comment 22 Commit Notification 2025-02-18 14:13:02 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/5a6a6c146f3bd5d12d5426e64a49c2dc18028f5e

tdf#164703 tdf#111969 sw Get*Correction: only mouse passes PixelPos

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2025-02-19 12:32:35 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/0be2539f57599f33efb8b542faf4a4d3762ba1e4

tdf#164703 tdf#111969 sw Get*Correction: only mouse passes PixelPos

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.