tdf#164703 tdf#111969 sw Get*Correction: only mouse passes PixelPos

This fixes my 24.8 commit 5bc7d0186d1a70990377a2f4c630fe11e2dfd166.

All my focus was on mouse clicks, so I didn't realize that
keyboard shortcuts were badly affected.

Avoid all of that cursor -> pixel -> cursor madness
and just don't provide a pixel position at all
when it is a keyboard request for a context menu.

I don't see how to create a unit test for this. (See earlier patchsets)

Change-Id: Id1fe7d1c15ce590ea4f882be49cfe539971c8c69
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181522
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit 793853fbd1665e90ab91e9b45826174707617275)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181680
(cherry picked from commit 5a6a6c146f3bd5d12d5426e64a49c2dc18028f5e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181844
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>